--- a/novo-usuario.html
+++ b/novo-usuario.html
@@ -4,19 +4,25 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pythonautas Launchpad</title>
-    <link rel="icon" href="/assets/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header class="site" role="banner">
       <div class="container">
         <a class="brand" href="index.html" aria-label="Criar Usuário - Pythonautas Launchpad">
-          <img class="logo" src="/assets/logo.svg" alt="" width="120" height="120" />
+          <img class="logo" src="assets/logo.svg" alt="Pythonautas Launchpad" />
           <div class="brand-text">
             <strong class="title">Pythonautas Launchpad</strong>
-            <span class="tagline">Painel de tarefas & controle de missões</span>
+            <span class="tagline">PAINEL DE TAREFAS &amp; CONTROLE DE MISSÕES</span>
           </div>
         </a>
+        <nav aria-label="primária">
+          <ul class="nav">
+            <li><a href="novo-usuario.html">Início</a></li>
+            <li><a href="index.html" aria-current="page">Registre-se</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
 
@@ -29,10 +35,7 @@
 
     <footer class="site" role="contentinfo">
       <div class="container">
-        <p>
-          © 2025 <a href="https://github.com/falk-dev/projeto-v-globotech" target="_blank" rel="noopener">Pythonautas — 
-          Academia Globotech</a>
-        </p>
+        <p>© 2025 <a href="https://github.com/falk-dev/projeto-v-globotech" target="_blank" rel="noopener">Pythonautas — Academia Globotech</a></p>
       </div>
     </footer>
   </body>
