--- a/lista.html
+++ b/lista.html
@@ -1,43 +1,57 @@
 <!doctype html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Pythonautas Launchpad</title>
-    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <header class="site" role="banner">
-      <div class="container">
-        <a class="brand" href="index.html" aria-label="Lista [Nome] - Pythonautas Launchpad">
-          <img class="logo" src="assets/logo.svg" alt="Pythonautas Launchpad" />
-          <div class="brand-text">
-            <strong class="title">Pythonautas Launchpad</strong>
-            <span class="tagline">PAINEL DE TAREFAS &amp; CONTROLE DE MISSÕES</span>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Pythonautas Launchpad</title>
+  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <header class="site" role="banner">
+    <div class="container">
+      <a class="brand" href="index.html" aria-label="Lista [Nome] - Pythonautas Launchpad">
+        <img class="logo" src="assets/logo.svg" alt="Pythonautas Launchpad" />
+        <div class="brand-text">
+          <strong class="title">Pythonautas Launchpad</strong>
+          <span class="tagline">PAINEL DE TAREFAS &amp; CONTROLE DE MISSÕES</span>
+        </div>
+      </a>
+      <nav aria-label="primária">
+        <ul class="nav">
+          <li><a href="dashboard.html">Minhas Listas</a></li>
+          <li><a href="index.html" aria-current="page">Sair</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main id="conteudo" class="site-main">
+    <div class="container">
+      <section class="card card--list" aria-label="Lista de tarefas">
+        <div class="row align-items-center">
+          <div class="col-9 card__content">
+            <h1>Projeto I - Introdução a Python</h1>
+            <p>Pipeline em Python com estruturas condicionais simples e CSV em memória.</p>
           </div>
-        </a>
-        <nav aria-label="primária">
-          <ul class="nav">
-            <li><a href="novo-usuario.html">Minhas Listas</a></li>
-            <li><a href="index.html" aria-current="page">Sair</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+          <div class="col-3 card__actions">
+            <a href="nova-lista.html" class="card__button">Adicionar tarefa</a>
+          </div>
+        </div>
+      </section>
+    </div>
+  </main>
 
-    <main id="conteudo" class="site-main">
-      <div class="container">
-        <h1>Lista [Nome]</h1>
-        <!-- CONTEÚDO ESPECÍFICO DA PÁGINA -->
-      </div>
-    </main>
+  <footer class="site" role="contentinfo">
+    <div class="container">
+      <p>© 2025 <a href="https://github.com/falk-dev/projeto-v-ada-globotech" target="_blank" rel="noopener">Pythonautas
+          — Academia Globotech</a></p>
+    </div>
+  </footer>
+</body>
 
-    <footer class="site" role="contentinfo">
-      <div class="container">
-        <p>© 2025 <a href="https://github.com/falk-dev/projeto-v-globotech" target="_blank" rel="noopener">Pythonautas — Academia Globotech</a></p>
-      </div>
-    </footer>
-  </body>
 </html>
-
