Adição de responsividade

--- a/lista.html
+++ b/lista.html
@@ -54,7 +54,7 @@
     <ul class="card__tasks">
       <li class="card__task">
         <div class="card__task-info">
-          <input type="checkbox" name="task-1" id="task-1">
+          <input type="checkbox" name="task-1" id="task-1" checked>
           <label for="task-1" class="card__name">Criar repositório</label>
           <span class="card__deadline">Prazo: 28/08/2025</span>
           <span class="card__owner">Responsável: Alice</span>
@@ -67,13 +67,52 @@
 
       <li class="card__task">
         <div class="card__task-info">
-          <input type="checkbox" name="task-1" id="task-1">
-          <label for="task-1" class="card__name">Criar repositório</label>
-          <span class="card__deadline">Prazo: 28/08/2025</span>
-          <span class="card__owner">Responsável: Alice</span>
+          <input type="checkbox" name="task-2" id="task-2">
+          <label for="task-2" class="card__name">Adicionar README</label>
+          <span class="card__deadline">Prazo: 31/08/2025</span>
+          <span class="card__owner">Responsável: Mychelle</span>
         </div>
         <div class="card__task-action">
           <span class="card__label card__label--medium">Média</span>
+          <img width="30" height="30" src="https://img.icons8.com/windows/100/trash.png" alt="trash" />
+        </div>
+      </li>
+
+      <li class="card__task">
+        <div class="card__task-info">
+          <input type="checkbox" name="task-3" id="task-3" checked>
+          <label for="task-3" class="card__name">Adicionar Pastas</label>
+          <span class="card__deadline">Prazo: 28/08/2025</span>
+          <span class="card__owner">Responsável: Will</span>
+        </div>
+        <div class="card__task-action">
+          <span class="card__label card__label--low">Baixa</span>
+          <img width="30" height="30" src="https://img.icons8.com/windows/100/trash.png" alt="trash" />
+        </div>
+      </li>
+
+      <li class="card__task">
+        <div class="card__task-info">
+          <input type="checkbox" name="task-4" id="task-4" checked>
+          <label for="task-4" class="card__name">Criar main.py</label>
+          <span class="card__deadline">Prazo: 02/09/2025</span>
+          <span class="card__owner">Responsável: Isa</span>
+        </div>
+        <div class="card__task-action">
+          <span class="card__label card__label--high">Alta</span>
+          <img width="30" height="30" src="https://img.icons8.com/windows/100/trash.png" alt="trash" />
+        </div>
+      </li>
+
+      <li class="card__task">
+        <div class="card__task-info">
+          <input type="checkbox" name="task-5" id="task-5">
+          <label for="task-5" class="card__name">Tratar arquivo .csv</label>
+          <span class="card__deadline">Prazo: 02/09/2025</span>
+          <span class="card__owner">Responsável: Não definido</span>
+        </div>
+        <div class="card__task-action">
+          <span class="card__label card__label--high">Alta</span>
           <img width="30" height="30" src="https://img.icons8.com/windows/100/trash.png" alt="trash" />
         </div>
       </li>
