--- a/dashboard.html
+++ b/dashboard.html
@@ -142,7 +142,7 @@
                    data-total="8" data-pendentes="2" data-concluidas="6" data-prioridade="media">
             <span class="badge badge--prio badge--media">Média</span>
             <h2 class="dashboard-list-card__title">
-              <a href="lista.html">Projeto VI — Integração &amp; Deploy</a>
+              <a href="lista.html">Projeto VI - Integração &amp; Deploy</a>
             </h2>
             <div class="badges-inline">
               <a class="meta-link" href="lista.html#todas"><strong>8</strong> tarefas</a>
@@ -159,6 +159,27 @@
           <!-- /PROJETOS -->
 
         </section>
+
+
+          <!-- legenda (fica DEPOIS dos cards) -->
+          <section class="legend" aria-label="Legenda de prioridades">
+            <ul class="legend__list" role="list">
+              <li class="legend__item" role="listitem">
+                <span class="legend__badge legend__badge--alta">Alta</span>
+                <span class="legend__text">Prioridade alta = executar primeiro</span>
+              </li>
+              <li class="legend__item" role="listitem">
+                <span class="legend__badge legend__badge--media">Média</span>
+                <span class="legend__text">Prioridade média = tratar em breve</span>
+              </li>
+              <li class="legend__item" role="listitem">
+                <span class="legend__badge legend__badge--baixa">Baixa</span>
+                <span class="legend__text">Prioridade baixa = pode aguardar</span>
+              </li>
+            </ul>
+          </section>
+        </section>
+      
       </section>
 
     </div>
