update nova tarefa
https://github.com/users/falk-dev/projects/5/views/1?pane=issue&itemId=124763199&issue=falk-dev%7Cprojeto-v-ada-globotech%7C10

--- a/nova-tarefa.html
+++ b/nova-tarefa.html
@@ -68,12 +68,16 @@
                 <option value="" disabled selected>Selecione</option>
                 <option>Alice Ochoa</option>
                 <option>Gabriela Raposo</option>
+                <option>Mychelle Ketlen</option>
+                <option>Isabela Maia</option>
+                <option>Will Costa</option>
+                <option>Rafael Menezes</option>
                 <option>Equipe Pythonautas</option>
               </select>
             </div>
           </div>
 
-          <!-- grid com data limite e tags (opcional; remova se não usar) -->
+          <!-- grid com data limite e tags-->
           <div class="grid-2">
             <div class="field">
               <label class="sr-only" for="dataLimite">Data limite</label>
