--- a/nova-tarefa.html
+++ b/nova-tarefa.html
@@ -70,7 +70,7 @@
                 <option>Gabriela Raposo</option>
                 <option>Mychelle Ketlen</option>
                 <option>Isabela Maia</option>
-                <option>Will Costa</option>
+                <option>William de Almeida</option>
                 <option>Rafael Menezes</option>
                 <option>Equipe Pythonautas</option>
               </select>
